plugins/kotlin/idea/tests/testData/multiplatform/aliasesTypeMismatch/jvmLibrary/core.kt
package platform.lib

open class <!LINE_MARKER("descr='Is subclassed by MyCancellationException MyIllegalStateException OtherException [jvm]  Click or press ... to navigate'")!>MyException<!>

open class <!LINE_MARKER("descr='Is subclassed by MyCancellationException OtherException [jvm]  Click or press ... to navigate'")!>MyIllegalStateException<!> : MyException()

open class MyCancellationException : MyIllegalStateException()